# Sailfish-backend

./: .gitignore  API_REFERENCE.md  MANIFEST.in  TODO.txt  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
Sailfish/: __init__.py  simulator.py
_Sailfish/: __init__.pyi
msasim/: auto_gamma_correlation.py  constants.py  distributions.py  msa.py  protocol.py  sailfish.py  simulator.py  substitutions.py  tree.py
src/: AvlTree.h  AvlTreeWithRates.h  BlockCommon.h  BlockTree.h  BlockTreeWithRates.h  BranchTransitionProbabilities.h  CachedTransitionProbabilities.h  CategorySampler.h  DiscreteDistribution.h  DynamicProposalArray.hpp  Event.h  FastRejectionSampler.h  FixedList.h  IndelSimulator.h  IteratorSequence.h  LinkedList.h  MSA.h  MsaFixed.h  OptimizedChebyshevFactory.h  Sequence.h  SimulationContext.h  SimulationProtocol.h  Simulator.h  SimulatorContext.h  SubstitutionSimulator.h  SubstitutionsGillespie.h  SuperSequence.h  allModels.h  encodedSequence.h  main.cpp  modelFactory.cpp  modelFactory.h  rateMatrixSim.cpp  rateMatrixSim.h  substitutionContainer.h  substitutionManager.h
tests/cpp_tests/: a.out  continuouswritetest.cpp  encodedSeq_test.cpp  indelOnlySimtest.cpp  indel_benchmark.cpp  invariantsitestest.cpp  largeTreeTest.cpp  linkelisttest.cpp  multisimtest.cpp  out.txt  profiling_test.cpp  proteinmodeltest.cpp  sequenceAndListTest.cpp  simtest.cpp  singlesimtest  singlesimtest.cpp  substitution_tests.cpp  test.cpp  testSuperSeq.cpp  test_2  test_2.cpp  test_abc.cpp  test_abc_2.cpp  zero_branch_tests.cpp
tests/cpp_tests/BlockTreeTests/: simple_test_deletions.cpp  simple_test_insertions.cpp  test_avl.cpp  test_avl_1.cpp  test_avl_basic.cpp  test_avl_random_insertions.cpp  test_avl_rate_deletions.cpp  test_avl_rates.cpp  test_deletions.cpp  test_indels.cpp  test_indels_with_rates.cpp  test_indels_with_rates_2.cpp  test_insertions.cpp  test_insertions_with_rates.cpp
tests/cpp_tests/MSATests/: benchmark.cpp  (+3 more)
tests/python_tests/: benchmark.py  deletion_limit_test.py  general_test.py  indels_test.py  invariant_sites_test.py  k2p_test.py  keep_ancestral_test.py  keep_ancestral_user_test.py  low_ram_test.py  no_indels_test.py  no_subs_test.py  rates_validation.py  saving_sequences_test.py  test.py  test_auto_gamma_correlation.py  test_multiprocessing.py  test_pickles.py  test_rates.py  test_sim.py  test_simulator.py  test_subs.py  unit_1.py
tests/trees/: normalbranches_nLeaves10000.treefile  normalbranches_nLeaves100000.treefile  normalbranches_nLeaves300.treefile  normalbranches_nLeaves30000.treefile  normalbranches_nLeaves5000.treefile  short_nLeaves10.treefile  simple.tree
(+27 files in other folders)
