[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"


# Normal options, etc.
[tool.cibuildwheel]
before-all = [
    "cd libs/Phylolib",
    "cmake .",
    "make",
    "ls .",
    "ls ..",
    "cp libPhylolib.a ../",
    "cp -r includes ../"
]
skip = "pp*"
# build = "cp310-manylinux*"
build-verbosity = 1
# test-command = "python {project}/tests/test.py"
# test-skip = "*universal2:arm64"

# [tool.ruff]
# extend-select = [
#   "B",   # flake8-bugbear
#   "I",   # isort
#   "PGH", # pygrep-hooks
#   "RUF", # Ruff-specific
#   "UP",  # pyupgrade
# ]
# extend-ignore = [
#   "E501",   # Line too long
# ]
# target-version = "py37"
