[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"


# Normal options, etc.
[tool.cibuildwheel]
skip =  ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux_i686"]
# build = "cp310-manylinux*"
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = [
    "ls .",
    "cd libs/Phylolib",
    "cmake .",
    "ls .",
    "make",
    "cp libPhylolib.* ../",
    "cp -r includes ../"
]

[tool.cibuildwheel.windows]
before-all = [
    "cd libs/Phylolib",
    "cmake .",
    "dir",
    "ls .",
    "make",
    "cp libPhylolib.* ../",
    "cp -r includes ../"
]
# test-command = "python {project}/tests/test.py"
# test-skip = "*universal2:arm64"

# [tool.ruff]
# extend-select = [
#   "B",   # flake8-bugbear
#   "I",   # isort
#   "PGH", # pygrep-hooks
#   "RUF", # Ruff-specific
#   "UP",  # pyupgrade
# ]
# extend-ignore = [
#   "E501",   # Line too long
# ]
# target-version = "py37"
